# bibliotheca

./: .gitignore  Cargo.toml  Makefile  README.md
ci/: container-tests.sh
crates/bibliotheca-admin/: Cargo.toml
crates/bibliotheca-admin/src/: lib.rs
crates/bibliotheca-admin/tests/: browse.rs
crates/bibliotheca-anisette/: Cargo.toml
crates/bibliotheca-anisette/src/: error.rs  lib.rs  provider.rs  proxy.rs  server.rs
crates/bibliotheca-anisette/tests/: proxy.rs
crates/bibliotheca-archive/: Cargo.toml
crates/bibliotheca-archive/src/: lib.rs
crates/bibliotheca-archive/tests/: archive.rs
crates/bibliotheca-btrfs/: Cargo.toml
crates/bibliotheca-btrfs/src/: lib.rs  testing.rs
crates/bibliotheca-btrfs/tests/: backend.rs
crates/bibliotheca-config/: Cargo.toml
crates/bibliotheca-config/src/: lib.rs
crates/bibliotheca-config/tests/: roundtrip.rs
crates/bibliotheca-core/: Cargo.toml
crates/bibliotheca-core/src/: acl.rs  backend.rs  data.rs  error.rs  identity.rs  lib.rs  password.rs  service.rs  share.rs  store.rs  subvolume.rs  testing.rs
crates/bibliotheca-core/tests/: service.rs
crates/bibliotheca-dropbox/: Cargo.toml
crates/bibliotheca-dropbox/src/: lib.rs
crates/bibliotheca-dropbox/tests/: routes.rs
crates/bibliotheca-gcs/: Cargo.toml
crates/bibliotheca-gcs/src/: lib.rs
crates/bibliotheca-gcs/tests/: routes.rs
crates/bibliotheca-http/: Cargo.toml
crates/bibliotheca-http/src/: lib.rs
crates/bibliotheca-http/tests/: auth.rs  share.rs
crates/bibliotheca-icloud/: Cargo.toml
crates/bibliotheca-icloud/src/: lib.rs
crates/bibliotheca-icloud/tests/: routes.rs
crates/bibliotheca-ipfs/: Cargo.toml
crates/bibliotheca-ipfs/src/: lib.rs
crates/bibliotheca-ipfs/tests/: ingest.rs  kubo_client.rs
crates/bibliotheca-nextcloud/: Cargo.toml
crates/bibliotheca-nextcloud/src/: lib.rs
crates/bibliotheca-nextcloud/tests/: routes.rs
crates/bibliotheca-oauth/: Cargo.toml
crates/bibliotheca-oauth/src/: lib.rs
crates/bibliotheca-oauth/tests/: flow.rs
crates/bibliotheca-photos/: Cargo.toml
crates/bibliotheca-photos/src/: lib.rs
crates/bibliotheca-photos/tests/: routes.rs
crates/bibliotheca-proto/: Cargo.toml  build.rs
crates/bibliotheca-proto/src/: lib.rs
crates/bibliotheca-s3/: Cargo.toml
crates/bibliotheca-s3/src/: lib.rs
crates/bibliotheca-s3/tests/: routes.rs
crates/bibliotheca-solid/: Cargo.toml
crates/bibliotheca-solid/src/: lib.rs
crates/bibliotheca-solid/tests/: routes.rs
crates/bibliotheca-sync-core/: Cargo.toml
crates/bibliotheca-sync-core/src/: conflict.rs  credentials.rs  crypto.rs  error.rs  events.rs  lib.rs  mount.rs  retry.rs  scheduler.rs  state.rs  testing.rs  trait_.rs
crates/bibliotheca-sync-core/src/townos/: auth.rs  mod.rs  storage.rs
crates/bibliotheca-sync-core/tests/: supervisor.rs
crates/bibliotheca-sync-dropbox/: Cargo.toml
crates/bibliotheca-sync-dropbox/src/: lib.rs
crates/bibliotheca-sync-dropbox/tests/: pull.rs
crates/bibliotheca-sync-gphotos/: Cargo.toml
crates/bibliotheca-sync-gphotos/src/: lib.rs
crates/bibliotheca-sync-gphotos/tests/: pull.rs
crates/bibliotheca-sync-icloud/: Cargo.toml
crates/bibliotheca-sync-icloud/src/: lib.rs
crates/bibliotheca-sync-icloud/src/auth/: anisette.rs  mod.rs  session.rs  srp.rs  twofactor.rs
crates/bibliotheca-sync-icloud/src/cloudkit/: client.rs  mod.rs  zones.rs
crates/bibliotheca-sync-icloud/src/photos/: delete.rs  fetch.rs  list.rs  mod.rs  upload.rs
crates/bibliotheca-sync-icloud/tests/: fixture.rs
crates/bibliotheca-sync-ipfs/: Cargo.toml
crates/bibliotheca-sync-ipfs/src/: lib.rs
crates/bibliotheca-sync-ipfs/tests/: pull.rs
crates/bibliotheca-sync-nextcloud/: Cargo.toml
crates/bibliotheca-sync-nextcloud/src/: lib.rs
crates/bibliotheca-sync-nextcloud/tests/: pull.rs
crates/bibliotheca-sync-solid/: Cargo.toml
crates/bibliotheca-sync-solid/src/: lib.rs
crates/bibliotheca-sync-solid/tests/: pull.rs
crates/bibliothecactl/: Cargo.toml
crates/bibliothecactl/src/: main.rs
crates/bibliothecactl/tests/: cli.rs
crates/bibliothecad/: Cargo.toml
crates/bibliothecad/src/: anisette.rs  control.rs  interfaces.rs  lib.rs  main.rs  sync.rs
crates/bibliothecad/tests/: grpc_e2e.rs
crates/bibliothecad/tests/common/: mod.rs
examples/: bibliotheca.yml
proto/bibliotheca/v1/: control.proto
