[package]
name = "bibliotheca-admin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bibliotheca-core.workspace = true
axum.workspace = true
tokio.workspace = true
tower.workspace = true
hyper.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
anyhow.workspace = true
tracing.workspace = true
time.workspace = true

[dev-dependencies]
bibliotheca-core = { workspace = true, features = ["test-support"] }
tempfile.workspace = true
reqwest = { workspace = true, features = ["json"] }
