[package]
name = "bibliotheca-archive"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bibliotheca-core.workspace = true
bibliotheca-config.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tar.workspace = true
sha2.workspace = true
hex.workspace = true
uuid.workspace = true
tokio = { workspace = true, features = ["time", "rt", "macros"] }
tokio-util.workspace = true

[dev-dependencies]
bibliotheca-core = { workspace = true, features = ["test-support"] }
tempfile.workspace = true
