[package]
name = "bibliotheca-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_yaml_ng.workspace = true
thiserror.workspace = true
anyhow.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
