[package]
name = "bibliotheca-ipfs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bibliotheca-core.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
reqwest = { workspace = true, features = ["multipart", "json"] }

[dev-dependencies]
bibliotheca-core = { workspace = true, features = ["test-support"] }
tempfile.workspace = true
parking_lot.workspace = true
axum.workspace = true
