[package]
name = "bibliotheca-nextcloud"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bibliotheca-core.workspace = true
tokio.workspace = true
tracing.workspace = true
axum.workspace = true
anyhow.workspace = true
base64.workspace = true
http.workspace = true
time.workspace = true

[dev-dependencies]
bibliotheca-core = { workspace = true, features = ["test-support"] }
tempfile.workspace = true
reqwest.workspace = true
