[package]
name = "bibliotheca-oauth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bibliotheca-config.workspace = true
axum = { workspace = true, features = ["macros"] }
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
url.workspace = true
rand.workspace = true
base64.workspace = true
sha2.workspace = true
parking_lot.workspace = true

[dev-dependencies]
axum = { workspace = true, features = ["macros"] }
tempfile.workspace = true
