[package]
name = "bibliotheca-s3"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bibliotheca-core.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
hmac.workspace = true
sha2.workspace = true
base64.workspace = true
anyhow.workspace = true
time.workspace = true

[dev-dependencies]
bibliotheca-core = { workspace = true, features = ["test-support"] }
tempfile.workspace = true
reqwest.workspace = true
