[package]
name = "bibliotheca-sync-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bibliotheca-core.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
time = { workspace = true }
uuid.workspace = true
bytes.workspace = true
parking_lot.workspace = true
base64.workspace = true
aes-gcm.workspace = true
rand.workspace = true
sha2.workspace = true
hex.workspace = true
url.workspace = true
reqwest = { workspace = true, features = ["json"] }
futures.workspace = true

[dev-dependencies]
bibliotheca-core = { workspace = true, features = ["test-support"] }
tempfile.workspace = true
axum = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
