[package]
name = "bibliotheca-sync-ipfs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bibliotheca-sync-core.workspace = true
bibliotheca-ipfs.workspace = true
bibliotheca-core.workspace = true
async-trait.workspace = true
tokio.workspace = true
bytes.workspace = true
time.workspace = true
url.workspace = true
tempfile.workspace = true
tracing.workspace = true

[dev-dependencies]
bibliotheca-core = { workspace = true, features = ["test-support"] }
axum.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
