[package]
name = "bibliothecactl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "bibliothecactl"
path = "src/main.rs"

[dependencies]
bibliotheca-proto.workspace = true
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tonic.workspace = true
tower.workspace = true
hyper-util.workspace = true
http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
