[package]
name = "bibliothecad"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "bibliothecad"
path = "src/main.rs"

[dependencies]
bibliotheca-proto.workspace = true
bibliotheca-core.workspace = true
bibliotheca-btrfs.workspace = true
bibliotheca-ipfs.workspace = true
bibliotheca-http.workspace = true
bibliotheca-s3.workspace = true
bibliotheca-solid.workspace = true
bibliotheca-dropbox.workspace = true
bibliotheca-nextcloud.workspace = true
bibliotheca-gcs.workspace = true
bibliotheca-icloud.workspace = true
bibliotheca-photos.workspace = true
bibliotheca-admin.workspace = true
bibliotheca-sync-core.workspace = true
bibliotheca-sync-ipfs.workspace = true
bibliotheca-sync-dropbox.workspace = true

anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
time.workspace = true
futures.workspace = true
async-stream.workspace = true
url.workspace = true

[dev-dependencies]
bibliotheca-core = { workspace = true, features = ["test-support"] }
tempfile.workspace = true
tower.workspace = true
hyper-util.workspace = true
http.workspace = true
futures.workspace = true
